syntax = "proto3";

option csharp_namespace = "GrpcMain.DeviceType";
package GrpcMain.DeviceType;
import "google/protobuf/empty.proto";
import "Common/CommonResponse.proto";

//TODO
service DeviceTypeService {

    //获取设备类型信息
    rpc GetTypeInfos(DTODefine.Request_GetTypeInfos)
        returns (DTODefine.Response_GetTypeInfos); 
    //添加设备类型信息
    rpc AddTypeInfo(Request_AddTypeInfo)
        returns (Response_AddTypeInfo);
    //更新设备类型信息
    rpc UpdateTypeInfo(DTODefine.Request_UpdateTypeInfo)
        returns (CommonResponse);
    //删除设备类型信息

}

message Request_AddTypeInfo{
    TypeInfo Info=1;
}
message Response_AddTypeInfo{
    TypeInfo Info=1;
}

message  ThingModel{
    int64 Id=1;
    string Name=2;
    int32 ValueType=3;
    string Remark=4;
    string  Unit=5;
    float MinValue=6;
    float MaxValue =7;
    bool Abandonted=8;
    float AlertLowValue=9;
    float AlertHighValue=10;
}   

message TypeInfo{
    int64 Id=1;
    optional string Name=2;
    repeated ThingModel ThingModels=3;
    optional string Script=5;
}


message DTODefine
{   
    
    message Request_GetTypeInfos{ 
        //当不指定Ids才使用Cursor
       optional int64 Cursor=1; 
       //如果没有指定则获取全部
       repeated  int64 Ids=2;
    }   
    message Response_GetTypeInfos{
        //0则后续无数据 当不指定Ids才使用Cursor
        int64 Cursor=1; 
        repeated TypeInfo TypeInfos=2;
    } 

    message Request_UpdateTypeInfo{ 
        TypeInfo Info=1;
    } 
    
    
}
 
